# vla-lab

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.ros2  README.md  main.py  requirements.txt  run.sh  run_ros2.sh
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/.private/franka_policy/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/.private/gazebo_plugins_local/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/.private/grasp_detection/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/.private/instruct_to_policy/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/.private/joint_prediction/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/.private/realsense2_description/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/.private/realsense_gazebo_description/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/.private/realsense_gazebo_plugin/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/devel/include/gazebo_plugins_local/: GazeboGetBoundingBoxes.h  GazeboGetBoundingBoxesRequest.h  GazeboGetBoundingBoxesResponse.h  GazeboGetJointsAxes.h  GazeboGetJointsAxesRequest.h  GazeboGetJointsAxesResponse.h
catkin_ws/devel/include/grasp_detection/: BoundingBox2D.h  BoundingBox2DArray.h  BoundingBox3D.h  BoundingBox3DArray.h  DetectGrasps.h  DetectGraspsRequest.h  DetectGraspsResponse.h  Grasp.h  Perception.h  PerceptionSingleCamera.h
catkin_ws/devel/include/joint_prediction/: JointAxis.h
catkin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
catkin_ws/devel/share/franka_policy/cmake/: franka_policyConfig-version.cmake  franka_policyConfig.cmake
catkin_ws/devel/share/gazebo_plugins_local/cmake/: gazebo_plugins_local-msg-extras.cmake  gazebo_plugins_local-msg-paths.cmake  gazebo_plugins_localConfig-version.cmake  gazebo_plugins_localConfig.cmake
catkin_ws/devel/share/grasp_detection/cmake/: grasp_detection-msg-extras.cmake  (+3 more)
docker/: Dockerfile  Dockerfile.llm  docker-compose.yaml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/panda_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/panda_bringup/launch/: demo.launch.py
ros2_ws/src/panda_description/: CMakeLists.txt  package.xml
ros2_ws/src/panda_description/config/: controllers.yaml
ros2_ws/src/panda_description/panda/: model.sdf
ros2_ws/src/panda_description/urdf/: panda.urdf  panda.urdf.xacro
ros2_ws/src/panda_env_cmd/: package.xml  setup.cfg  setup.py
ros2_ws/src/panda_env_cmd/launch/: panda_with_cmd.launch.py
ros2_ws/src/panda_env_cmd/panda_env_cmd/: command_server.py  env_api.py
ros2_ws/src/panda_env_cmd_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/panda_env_cmd_interfaces/srv/: ExecCommand.srv
ros2_ws/src/panda_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/panda_gazebo/worlds/: lab_world.sdf
ros2_ws/src/panda_moveit_config/srdf/: panda.srdf
ros2_ws/src/panda_sim/: CMakeLists.txt  package.xml
ros2_ws/src/panda_sim/config/: ros2_control_panda.yaml
ros2_ws/src/panda_sim/description/: panda.sdf
ros2_ws/src/panda_sim/launch/: sim.launch.py
ros2_ws/src/panda_sim/worlds/: empty.sdf
ros_packages/nl_command_bridge/: package.xml  setup.cfg  setup.py
ros_packages/nl_command_bridge/nl_command_bridge/: nl_command_bridge.py
ros_packages/panda_task_msgs/: CMakeLists.txt  package.xml
ros_packages/panda_task_msgs/action/: ManipTask.action
(+372 files in other folders)
