<?xml version="1.0"?>
<package format="3">
<name>panda_env_cmd</name>
<version>0.1.0</version>
<description>Generic command server (rclpy) for Panda environment + Ignition launch.</description>


<maintainer email="you@example.com">You</maintainer>
<license>Apache-2.0</license>


<buildtool_depend>ament_cmake</buildtool_depend>
<buildtool_depend>ament_python</buildtool_depend>


<depend>rclpy</depend>
<depend>std_msgs</depend>
<depend>builtin_interfaces</depend>
<depend>ros_ign_gazebo</depend>
<depend>robot_state_publisher</depend>
<depend>xacro</depend>
<depend>ament_index_python</depend>


<!-- Only needed if you call MoveIt etc. Add their packages here when you wire them. -->


<export>
<build_type>ament_python</build_type>
</export>
</package>