<?xml version="1.0"?>
<package format="3">
  <name>panda_env_cmd_interfaces</name>
  <version>0.1.0</version>
  <description>SRV for env command server</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl generation + runtime -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- If your .srv DEPENDENCIES mentions these -->
  <depend>builtin_interfaces</depend>

  <!-- Required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
