<?xml version="1.0"?>
<package format="3">
  <name>panda_sim</name>
  <version>0.1.0</version>
  <description>Gazebo Fortress + ros2_control wrapper for the Panda on ROS 2 Humble.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Get Panda URDF & meshes from MoveIt resources -->
  <exec_depend>moveit_resources_panda_description</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>

  <!-- Gazebo (Fortress) integration via ros_gz -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- ros2_control stack -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <!-- Gazebo-side ros2_control plugin (package name on Humble may still say ign_) -->
  <exec_depend>ign_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
